Notificatio Bell Fixed + improve logic